--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,3 +1,13 @@
-<!doctype html>
-<title>Belajar MVC Flask</title>
-  <h1>Hello {{ nama }}!</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>CSV Upload</title>
+</head>
+<body>
+    <h1>Upload CSV File</h1>
+    <form method="POST" action="/upload" enctype="multipart/form-data">
+        <input type="file" name="file" accept=".csv" required>
+        <input type="submit" value="Upload">
+    </form>
+</body>
+</html>
