dev: form update

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,6 +7,9 @@
     <h1>Upload CSV File</h1>
     <form method="POST" action="/upload" enctype="multipart/form-data">
         <input type="file" name="file" accept=".csv" required>
+        <input name="td" required>
+        <input name="tm" required>
+
         <input type="submit" value="Upload">
     </form>
 </body>
